Resolves: tdf#76115 support wrong \ path separator

Change-Id: I55eb665c0b3ca43bf747bdd55ecae6e7383440a3